reference/tests/snapshots/snapshot__run_reference_examples@dates_and_times-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/dates_and_times-2.prql
---
SELECT
  TIMESTAMP '2020-01-01T13:19:55-0800' AS first_prql_commit
