reference/tests/snapshots/snapshot__run_reference_examples@employees-3-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/examples/employees-3-0.prql
---
WITH table_0 AS (
  SELECT
    dept_emp.emp_no,
    dept_emp.dept_no,
    AVG(salaries.salary) AS salary
  FROM
    dept_emp
    LEFT JOIN salaries ON salaries.emp_no = dept_emp.emp_no
    AND (salaries.from_date, salaries.to_date) OVERLAPS (dept_emp.from_date, dept_emp.to_date)
  GROUP BY
    dept_emp.emp_no,
    dept_emp.dept_no
)
SELECT
  table_0.dept_no,
  table_0.salary,
  employees.gender,
  titles.title
FROM
  table_0
  JOIN employees USING(emp_no)
  JOIN titles USING(emp_no)
